product cards new UI styling

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -409,4 +409,4 @@ input:-webkit-autofill:active {
   background-clip: text;
 }
 @import "tailwindcss";
-@import "./homepage.css";
+@import "./all.css";
